--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
         <script src="scripts/home/homeRoute.js"></script>
         <script src="scripts/home/homeController.js"></script>
         <script src="scripts/home/homeFactory.js"></script>
+        <script src="scripts/common/constants.js"></script>
         <!-- endbuild -->
 </body>
 </html>
