--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,9 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    
+    <!-- including the css for jquery-ui -->
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home/home.css">
     <!-- endbuild -->
@@ -44,6 +47,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -53,6 +57,7 @@
         <script src="scripts/home/homeController.js"></script>
         <script src="scripts/home/homeFactory.js"></script>
         <script src="scripts/common/constants.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
