added several js and css files and js for swiper library

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/Swiper/dist/css/swiper.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -17,6 +18,7 @@
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home/home.css">
+    <link rel="stylesheet" href="styles/ribbon.css">
     <!-- endbuild -->
   </head>
   <body ng-app="leparticiousUiApp">
@@ -48,6 +50,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/Swiper/dist/js/swiper.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -57,7 +60,9 @@
         <script src="scripts/home/homeController.js"></script>
         <script src="scripts/home/homeFactory.js"></script>
         <script src="scripts/common/constants.js"></script>
+        <script src="scripts/common/directives.js"></script>
 
         <!-- endbuild -->
+    <side-ribbon></side-ribbon>    
 </body>
 </html>
