Popup and data details

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,9 @@
         <script src="scripts/common/directives.js"></script>
         <script src="scripts/common/baseFactory.js"></script>
 		<script src="scripts/common/baseController.js"></script>
+        <script src="scripts/data/dataController.js"></script>
+        <script src="scripts/home/homeService.js"></script>
+        <script src="scripts/data/dataFactory.js"></script>
         <!-- endbuild -->
     <side-ribbon selected-category = "selectedCategory" category-map = "categoryMap"></side-ribbon>    
 </body>
