--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     
     <!-- including the css for jquery-ui -->
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css"/>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
@@ -60,13 +61,15 @@
         <script src="scripts/home/homeController.js"></script>
         <script src="scripts/home/homeFactory.js"></script>
         <script src="scripts/common/constants.js"></script>
-        <script src="scripts/common/directives.js"></script>
+        <!--<script src="scripts/common/directives.js"></script>-->
         <script src="scripts/common/baseFactory.js"></script>
 		<script src="scripts/common/baseController.js"></script>
         <script src="scripts/data/dataController.js"></script>
         <script src="scripts/home/homeService.js"></script>
         <script src="scripts/data/dataFactory.js"></script>
         <!-- endbuild -->
-    <side-ribbon selected-category = "selectedCategory" category-map = "categoryMap"></side-ribbon>    
+    <!-- <side-ribbon ></side-ribbon> -->
+    <!--including the ribbon-->
+    <div data-ng-include="'views/ribbon/ribbon.html'"></div>  
 </body>
 </html>
