--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <base href="/"></base> 
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
