--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,9 @@
         <script src="scripts/data/dataController.js"></script>
         <script src="scripts/home/homeService.js"></script>
         <script src="scripts/data/dataFactory.js"></script>
+        <script src="scripts/contact/contactFactory.js"></script>
+        <script src="scripts/common/captchaDirective.js"></script>
+
         <!-- endbuild -->
         
     <!-- <side-ribbon ></side-ribbon> -->
