--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/common/baseFactory.js"></script>
 		<script src="scripts/common/baseController.js"></script>
         <script src="scripts/data/dataController.js"></script>
+        <script src="scripts/data/dataService.js"></script>
         <script src="scripts/home/homeService.js"></script>
         <script src="scripts/data/dataFactory.js"></script>
         <script src="scripts/contact/contactFactory.js"></script>
