--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <!-- including the css for jquery-ui -->
     <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css"/>
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
