--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,9 @@
 
         <script src="scripts/detail/detailController.js"></script>
         <script src="scripts/gallery/galleryController.js"></script>
+        
+        <!-- loading google map api in async and defer mode -->
+        <script src="scripts/google/GoogleMaps.min.js" async defer></script>
         <!-- endbuild -->
         
     <!-- <side-ribbon ></side-ribbon> -->
