Code refactoring to make refresh work on detail controller

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/Swiper/dist/js/swiper.js"></script>
     <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
