committing the issue fix for Footer appearing before

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,6 @@
     
     <!--Adding the footer of the application-->
     
-    <div data-ng-include="'views/footer/footer.html'"></div>  
+    <div data-ng-include="'views/footer/footer.html'" data-ng-show="showFooter"></div>  
 </body>
 </html>
