--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="styles/data.css">
     <link rel="stylesheet" href="styles/detail.css">
     <link rel="stylesheet" href="styles/gallery.css">
+    <link rel="stylesheet" href="styles/about.css">
     <!-- endbuild -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
