Apache deployment changes

--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,17 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/Swiper/dist/css/swiper.css" />
+    <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     
     <!-- including the css for jquery-ui -->
-    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css"/>
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css"/>
+    <link rel="stylesheet" href="styles/custom/jquery-ui.css"/>
+    <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
+    <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/home/home.css">
+    <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
     <link rel="stylesheet" href="styles/data.css">
     <link rel="stylesheet" href="styles/detail.css">
