--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/custom/jquery-ui.css"/>
     <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
+    <link rel="stylesheet" href="styles/custom/jquery.fs.boxer.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
@@ -90,6 +91,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/custom/jquery.fs.boxer.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/home/homeRoute.js"></script>
         <script src="scripts/home/homeController.js"></script>
