--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="styles/custom/jquery-ui.css"/>
     <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
-    <link rel="stylesheet" href="styles/custom/jquery.fs.boxer.css"/>
+    <link rel="stylesheet" href="styles/custom/jquery-fs-boxer.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
