Cosmetic and REST API hit changes

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/"></base> 
     <meta charset="utf-8">
-    <title></title>
+    <title>Bringing smile on faces</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -17,6 +17,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     
     <!-- including the css for jquery-ui -->
+    <link rel="icon" type="image/png" href="images/lp_theme_symbol.png" sizes ="196x196" />
     <link rel="stylesheet" href="styles/custom/jquery-ui.css"/>
     <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
