--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <base href="/"></base> 
-    <meta charset="utf-8">
-    <title>Bringing smile on faces</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Le Partycious</title>
+    <meta name="description" content="Le Partycious is an online platform for organising events which provides you with the relevant information regarding different venues,caterers,photographers and decorators. Its all about bringing all the vendors under
+	one roof so that they coordinate well and work towards a success story of an event.">
+    <meta name="keywords" content="event management, venues, caterers, photographers, rentals, decorators" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
