--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/custom/jquery.fs.boxer.js"></script>
+        <script src="scripts/custom/jquery.toaster.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/home/homeRoute.js"></script>
         <script src="scripts/home/homeController.js"></script>
