--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     
     <!-- including the css for jquery-ui -->
-    <link rel="icon" type="image/png" href="images/lp_theme_symbol.png" sizes ="196x196" />
+    <link rel="icon" type="image/png" href="/images/lp_theme_symbol.ico" sizes ="32x32" />
     <link rel="stylesheet" href="styles/custom/jquery-ui.css"/>
     <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
