committing with new changes

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/"></base> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Le Partycious</title>
+    <title>Bringing Smiles on Faces</title>
     <meta name="description" content="Le Partycious is an online platform for organising events which provides you with the relevant information about different venues,caterers, photographers, decorators and much more. Its all about bringing all the vendors under
 	one roof so that they coordinate well and work towards a success story of an event.">
     <meta name="keywords" content="event management, venues, caterers, photographers, rentals, decorators, Parties, marriages, weddings, birthdays" />
