--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta charset="UTF-8" />
     <title>Le Partycious - Your Online Event Planner</title>
-    <meta name="description" content="Le Partycious is an online platform for organising events which provides you with the relevant information about different vendors- venues, caterers, photographers, decorators and much more. Its all about bringing all the vendors under
+    <meta name="description" content="Le Partycious is an online event planning platform which provides you with the relevant information about different vendors- venues, caterers, photographers, decorators and much more. Its all about bringing all the vendors under
 	one roof so that they coordinate well and work towards a success story of an event." />
-    <meta name="keywords" content="Events, vendors, venues, caterers, photographers, decorators, entertainment, others, smiles, party, marriage, wedding" />
     <meta name="geo.region" content="India" />
 	<meta name="robots" content="index,follow" />
 	<meta name="GOOGLEBOT" content="INDEX, FOLLOW" />
@@ -18,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="lepartycious">
     <meta name="copyright" content="Le Partycious - 2016" />
+    <meta name="fragment" content="!"/>
     <meta property="og:title" content="Le Partycious - Your Online Event Planner" />
 	<meta property="og:description" content="Le Partycious is an online platform for organising events which provides you with the relevant information about different venues, caterers, photographers, decorators and much more. Its all about bringing all the vendors under
 	one roof so that they coordinate well and work towards a success story of an event." />
@@ -138,7 +138,7 @@
     <!--Adding the ribbon of the application-->
     
 	<a href="javascript:void(0)" id="back-to-top">
-		<img src="/images/arrow_up.png" width="50"  data-toggle="tooltip" title="Back to Top"/>
+		<img src="/images/arrow_up.png" width="50"  data-toggle="tooltip" title="Back to Top" alt="top-btn"/>
 	</a> 
     
     <!--Adding the footer of the application-->
