committing changes made from Le Partycious to LePartycious

--- a/app/404.html
+++ b/app/404.html
@@ -5,9 +5,8 @@
 		</base>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>404 Page Not Found</title>
-		<meta name="description" content="Le Partycious is an online platform for organising events which provides you with the relevant information regarding different venues,caterers,photographers and decorators. Its all about bringing all the vendors under
-		one roof so that they coordinate well and work towards a success story of an event.">
-		<meta name="keywords" content="event management, venues, caterers, photographers, rentals, decorators" />
+		<meta name="description" content="LePartycious is an online event planning platform which provides you with the relevant information about different vendors- venues, caterers, photographers, decorators and much more. Its all about bringing all the vendors under
+		one roof so that they coordinate well and work towards a success story of an event." />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<!-- build:css(.) styles/vendor.css -->
@@ -19,7 +18,8 @@
 		<!-- build:css(.tmp) styles/main.css -->
 
 		<!-- including the css for jquery-ui -->
-		<link rel="icon" type="image/png" href="/images/lp_theme_symbol.ico" sizes ="32x32" />
+		    <link rel="icon" href="/images/favicon.png" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon"/>
 
 		<link rel="stylesheet" href="styles/main.css">
 		<style>
@@ -50,7 +50,7 @@
 			<div class="container-fluid">
 				<div class="navbar-header">
 
-					<a class="navbar-brand" href="/"> <img src="/images/lp_logo.png" height="60px;" alt="logo-image"></a>
+					<a class="navbar-brand" href="/"> <img src="/images/lp_logo.png" height="60px;" alt="LePartycious - Your Online Event Planner"></a>
 
 				</div>
 			</div>
