--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
     <!--<script src="//load.sumome.com/" data-sumo-site-id="d00a41816339a7f7e4b41528d25c4c27f456643d5a7c57fa1083522f44ce9f1c" async="async"></script>-->
 
   </head>
-  <body data-ng-app="leparticiousUiApp" data-ng-controller="baseController as vm">
+  <body data-ng-app="leparticiousUiApp" data-ng-controller="baseController as vm" data-ng-class="currentPage">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
