--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
 	<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon"/>
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/material-design-lite/material.min.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/Swiper/dist/css/swiper.css" />
     <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
@@ -38,6 +39,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     
     <!-- including the css for jquery-ui -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles/custom/jquery-ui.css"/>
     <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
@@ -126,6 +128,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/material-design-lite/material.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
@@ -169,7 +172,6 @@
         <script src="scripts/login/loginController.js"></script>
         <script src="scripts/login/signupController.js"></script>
         <script src="scripts/login/fgtpwdController.js"></script>
-       
         <!-- endbuild -->
 
          <!-- loading google map api in async and defer mode -->
