--- a/app/404.html
+++ b/app/404.html
@@ -11,43 +11,43 @@
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<!-- build:css(.) styles/vendor.css -->
 		<!-- bower:css -->
-		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-		<link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+		<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="../bower_components/angular-material/angular-material.css" />
 
 		<!-- endbower -->
 		<!-- endbuild -->
 		<!-- build:css(.tmp) styles/main.css -->
 
 		<!-- including the css for jquery-ui -->
-		    <link rel="icon" href="/images/favicon.png" type="image/x-icon"/>
-	<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon"/>
+		    <link rel="icon" href="images/favicon.png" type="image/x-icon"/>
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon"/>
 
 		<!--<link rel="stylesheet" href="styles/main.css">-->
 		<style>
 			.page_bg{
 				position: absolute;
-				background-image: url('/images/404/bg.jpg');
+				background-image: url('images/404/bg.jpg');
 				background-repeat: no-repeat;
 				height: 100%;
 				width: 100%;
 			}
 			
 			.404_text{
-				background-image: url('/images/404/404_text.png');
+				background-image: url('images/404/404_text.png');
 				background-repeat: no-repeat;
 				width: 339px;
 				height: 142px;
 			}
 			
 			.caution{
-				background-image: url('/images/404/caution.png');
+				background-image: url('images/404/caution.png');
 				background-repeat: no-repeat;
 				width: 40px;
 				height: 40px;
 			}
 			
 			.banner{
-				background-image: url('/images/404/banner.png');
+				background-image: url('images/404/banner.png');
 				background-repeat: no-repeat;
 				width: 535px;
 				height: 212px;
@@ -81,8 +81,8 @@
 		
 		<!-- build:js(.) scripts/vendor.js -->
 		<!-- bower:js -->
-		<script src="bower_components/jquery/dist/jquery.js"></script>
-		<script src="bower_components/angular/angular.js"></script>
+		<script src="../bower_components/jquery/dist/jquery.js"></script>
+		<script src="../bower_components/angular/angular.js"></script>
 
 	</body>
 </html>
