checking in review system UI

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,6 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/Swiper/dist/css/swiper.css" />
     <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
-    <link rel="stylesheet" href="bower_components/angularjs-datepicker/dist/angular-datepicker.min.css" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -44,6 +43,7 @@
     <link rel="stylesheet" href="styles/custom/font-awesome.css"/>
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
     <link rel="stylesheet" href="styles/custom/jquery-fs-boxer.css"/>
+    <link rel="stylesheet" href="styles/custom/ng-rating.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
@@ -146,7 +146,6 @@
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/angular-spinner/angular-spinner.js"></script>
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
-    <script src="bower_components/angularjs-datepicker/dist/angular-datepicker.min.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -154,6 +153,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/custom/jquery.fs.boxer.js"></script>
         <script src="scripts/custom/jquery.toaster.js"></script>
+        <script src="scripts/custom/ng-rating.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/home/homeRoute.js"></script>
         <script src="scripts/home/homeController.js"></script>
