--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,7 @@
     <script src="bower_components/angular-spinner/angular-spinner.js"></script>
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/a0-angular-storage/dist/angular-storage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
