--- a/app/index.html
+++ b/app/index.html
@@ -174,6 +174,7 @@
         <script src="scripts/login/loginController.js"></script>
         <script src="scripts/login/signupController.js"></script>
         <script src="scripts/login/fgtpwdController.js"></script>
+        <script src="scripts/login/resetpwdController.js"></script>
         <!-- endbuild -->
 
          <!-- loading google map api in async and defer mode -->
