--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="bower_components/Swiper/dist/css/swiper.css" />
     <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/angular-wizard/dist/angular-wizard.min.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -44,6 +46,7 @@
     <link rel="stylesheet" href="styles/custom/awesome-bootstrap-checkbox.css"/>
     <link rel="stylesheet" href="styles/custom/jquery-fs-boxer.css"/>
     <link rel="stylesheet" href="styles/custom/ng-rating.css"/>
+    <link rel="stylesheet" href="styles/custom/wan-select.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/ribbon.css">
@@ -52,6 +55,8 @@
     <link rel="stylesheet" href="styles/gallery.css">
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/login.css">
+    
+    <link rel="stylesheet" href="lp_wizard/styles/wizard.css">
 
     <!-- endbuild -->
     <script>
@@ -148,6 +153,8 @@
     <script src="bower_components/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/a0-angular-storage/dist/angular-storage.js"></script>
+    <script src="bower_components/angular-wizard/dist/angular-wizard.min.js"></script>
+    <script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -155,6 +162,7 @@
         <script src="scripts/custom/jquery.fs.boxer.js"></script>
         <script src="scripts/custom/jquery.toaster.js"></script>
         <script src="scripts/custom/ng-rating.js"></script>
+        <script src="scripts/custom/wan-select.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/home/homeRoute.js"></script>
         <script src="scripts/home/homeController.js"></script>
@@ -175,6 +183,10 @@
         <script src="scripts/login/signupController.js"></script>
         <script src="scripts/login/fgtpwdController.js"></script>
         <script src="scripts/login/resetpwdController.js"></script>
+        
+        <script src="lp_wizard/scripts/app.js"></script>
+        <script src="lp_wizard/scripts/wizardController.js"></script>
+        <script src="lp_wizard/views/venue_wizard/services/crudEventArea.service.js"></script>
         <!-- endbuild -->
 
          <!-- loading google map api in async and defer mode -->
