--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,7 @@
     <script src="bower_components/a0-angular-storage/dist/angular-storage.js"></script>
     <script src="bower_components/angular-wizard/dist/angular-wizard.min.js"></script>
     <script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -187,6 +188,9 @@
         <script src="lp_wizard/scripts/app.js"></script>
         <script src="lp_wizard/scripts/wizardController.js"></script>
         <script src="lp_wizard/views/venue_wizard/services/crudEventArea.service.js"></script>
+        <script src="lp_wizard/views/venue_wizard/services/crudRoom.service.js"></script>
+        
+        <script src="lp_wizard/lookups/venue_lookup.js"></script>
         <!-- endbuild -->
 
          <!-- loading google map api in async and defer mode -->
