--- a/app/index.html
+++ b/app/index.html
@@ -225,6 +225,8 @@
     <script src="bower_components/angular-wizard/dist/angular-wizard.min.js"></script>
     <script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="bower_components/rxjs/dist/rx.all.js"></script>
+    <script src="bower_components/rx-angular/dist/rx.angular.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -248,6 +250,9 @@
         <script src="scripts/contact/contactFactory.js"></script>
         <script src="scripts/common/captchaDirective.js"></script>
         <script src="scripts/common/config.js"></script>
+        <script src="scripts/common/loggedInUserDetails.js"></script>
+        <script src="scripts/common/userDetailsStore.js"></script>
+        <script src="scripts/common/loginStatusService.js"></script>
         <script src="scripts/detail/detailController.js"></script>
         <script src="scripts/login/loginController.js"></script>
         <script src="scripts/login/signupController.js"></script>
