changes done for integration of login module

--- a/app/index.html
+++ b/app/index.html
@@ -218,6 +218,7 @@
         <script src="scripts/common/loginStatusService.js"></script>
         <script src="scripts/common/progressbarService.js"></script>
         <script src="scripts/detail/detailController.js"></script>
+        <script src="scripts/detail/detailFactory.js"></script>
         <script src="scripts/login/loginController.js"></script>
         <script src="scripts/login/signupController.js"></script>
         <script src="scripts/login/fgtpwdController.js"></script>
