category and city is kept in session storage

--- a/app/index.html
+++ b/app/index.html
@@ -220,6 +220,7 @@
         <script src="scripts/common/config.js"></script>
         <script src="scripts/common/loggedInUserDetails.js"></script>
         <script src="scripts/common/userDetailsStore.js"></script>
+        <script src="scripts/common/appDetailsStore.js"></script>
         <script src="scripts/common/loginStatusService.js"></script>
         <script src="scripts/common/progressbarService.js"></script>
         <script src="scripts/detail/detailController.js"></script>
