--- a/app/index.html
+++ b/app/index.html
@@ -232,6 +232,7 @@
         
         <script src="lp_wizard/scripts/app.js"></script>
         <script src="lp_wizard/scripts/wizardController.js"></script>
+        <script src="lp_wizard/scripts/venueWizardController.js"></script>
         <script src="lp_wizard/views/venue_wizard/services/crudEventArea.service.js"></script>
         <script src="lp_wizard/views/venue_wizard/services/crudRoom.service.js"></script>
         
