checking in changes for reset forgot password

--- a/app/index.html
+++ b/app/index.html
@@ -229,6 +229,7 @@
         <script src="scripts/login/signupController.js"></script>
         <script src="scripts/login/fgtpwdController.js"></script>
         <script src="scripts/login/resetpwdController.js"></script>
+        <script src="scripts/login/resetforgotpwdController.js"></script>
         
         <script src="lp_wizard/scripts/app.js"></script>
         <script src="lp_wizard/scripts/wizardController.js"></script>
